Fixed issue-#2647 Position of cross in about modal is not aligned center in blue border box

--- a/client/styles/components/_overlay.scss
+++ b/client/styles/components/_overlay.scss
@@ -51,7 +51,7 @@
 
 .overlay__close-button {
   @include icon();
-  padding: #{3 / $base-font-size}rem 0 #{3 / $base-font-size}rem #{10 / $base-font-size}rem;
+  padding: #{3 / $base-font-size}rem #{10 / $base-font-size}rem #{3 / $base-font-size}rem #{10 / $base-font-size}rem;
 }
 
 /* Fixed height overlay */
